# quickjs-hs

./: .gitignore  ChangeLog.md  LICENSE  README.md  quickjs-hs.cabal  stack.yaml
.github/workflows/: cabal.yml  haskell.yml  stack.yml
src/: Quickjs.hs
src/Quickjs/: Error.hs  Types.hsc
test/: Spec.hs
