cabal-version:  1.12
name:           quickjs-hs
version:        0.1.2.4
homepage:       https://github.com/goodlyrottenapple/quickjs-hs#readme
bug-reports:    https://github.com/goodlyrottenapple/quickjs-hs/issues
author:         Sam Balco
maintainer:     goodlyrottenapple@gmail.com
copyright:      2020 Sam Balco
license:        MIT
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    ChangeLog.md
category:       Javascript
synopsis:       Wrapper for the QuickJS Javascript Engine
description:
    This library is a wrapper for the [QuickJS](https://bellard.org/quickjs/) Javascript Engine.
    .
    To get started, see the ReadMe below.

extra-source-files:
    quickjs/cutils.h
  , quickjs/libbf.h
  , quickjs/libunicode-table.h
  , quickjs/libunicode.h
  , quickjs/libregexp-opcode.h
  , quickjs/libregexp.h
  , quickjs/list.h
  , quickjs/quickjs-atom.h
  , quickjs/quickjs-opcode.h

source-repository head
  type: git
  location: https://github.com/goodlyrottenapple/quickjs-hs

library
  exposed-modules:
      Quickjs, Quickjs.Types, Quickjs.Error
  other-modules:
      Paths_quickjs_hs
  hs-source-dirs:
      src
  build-depends:
    base                          >= 4.16.4 && < 4.17,

    aeson                         >= 2.1.2 && < 2.2,
    bytestring                    >= 0.11.4 && < 0.12,
    containers                    >= 0.6.5 && < 0.7,
    exceptions                    >= 0.10.4 && < 0.11,
    inline-c                      >= 0.9.1 && < 0.10,
    mtl                           >= 2.2.2 && < 2.3,
    scientific                    >= 0.3.7 && < 0.4,
    string-conv                   >= 0.2.0 && < 0.3,
    text                          >= 1.2.5 && < 1.3,
    time                          >= 1.11.1 && < 1.12,
    transformers                  >= 0.5.6 && < 0.6,
    unliftio-core                 >= 0.2.1 && < 0.3,
    unordered-containers          >= 0.2.19 && < 0.3,
    vector                        >= 0.13.0 && < 0.14


  default-language: Haskell2010
  include-dirs: quickjs
  c-sources:
      quickjs/cutils.c
    , quickjs/libbf.c
    , quickjs/libunicode.c
    , quickjs/libregexp.c
    , quickjs/quickjs.c
    , quickjs/quickjs-libc.c
  includes:
       quickjs/quickjs.h
     , quickjs/quickjs-libc.h
  cc-options:
    -static -D_GNU_SOURCE
    -DCONFIG_VERSION="2020-11-08"
    -DCONFIG_BIGNUM

test-suite quickjs-hs-test
  type:             exitcode-stdio-1.0
  main-is:          Spec.hs
  hs-source-dirs:   test
  other-modules:    Paths_quickjs_hs
  default-language: Haskell2010
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base
    , quickjs-hs           -any
    , aeson
    , exceptions
    , HUnit                >=1.6.0.0
    , QuickCheck           >=2.9
    , tasty                >=1.0
    , tasty-hunit          >=0.10
    , tasty-quickcheck     >=0.9
    , text
    , unordered-containers
    , vector
